working on section 2 goal ascription

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -56,6 +56,7 @@ This has consequences for the possible roles of interaction in explaining the ev
 
 
 \section{Mindreading: the normative project}
+\label{sec:intro}
 
 Mindreading is
 the process of identifying thoughts and actions on the basis of bodily movements,
@@ -148,20 +149,26 @@ Any application of our claim to understanding evolution or development is bound 
 A second qualification concerns the scope of mindreading.
 In most discussions of mindreading, the focus is on  ascription of beliefs and other mental states to individuals.
 But in what follows we shall focus on the ascription of goals to actions.
-As we explain below, 
-some may deny that goal ascription is mindreading.
-Our view is consistent with this denial.
-Evidence for ascriptions of beliefs and other mental states includes the occurrence (and non-occurrence) of goal-directed actions,
-and identifying these typically requires goal ascription.
+Some might claim that goal ascription is not mindreading, perhaps because 
+identifying relations between actions and the outcomes to which they are directed
+does not necessarily involve ascribing mental states.
+Our view is consistent with this claim (and with its negation).
+\label{goal_ascription_verify}
+Evidence for ascriptions of belief and of other mental states often includes the occurrence (and non-occurrence) of goal-directed actions.
+Identifying these actions typically requires goal ascription.
 In some cases, then, 
 evidence for the ascription of a goal
-will indirectly support the ascription of a belief or other mental state.
+will indirectly support the ascription of a belief or other mental state---%
+the evidence will support the ascription of a goal to an action,
+and this ascription will in turn support the ascription of a belief (say) to the agent of the action.
 Accordingly, even those who deny that goal ascription is mindreading should agree that sometimes evidence for a goal ascription is indirectly evidence for the ascription of a belief or other mental state.
 So whether or not goal ascription is deemed to be mindreading,
 a mindreader's access to evidence for mindreading  depends in part on her access to evidence for goal ascription.
 Our plan is to show that interacting mindreaders could make use, in ascribing goals, of evidence and principles which are not available to mere observers (who do not even appear to be in a position to interact with their targets).
-By showing this we will have shown that
-being (or appearing) poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know.
+In doing this we will be showing that
+mindreaders who are (or appear) poised to interact with others 
+could know things about their minds 
+which they might not otherwise be in a position to know.
 
 %Because the leading theories have supposed that being able to interact makes no difference,
 %they have treated the evidential basis for mindreading as more narrow than it truly is.
@@ -173,22 +180,21 @@ being (or appearing) poised to interact with others enables one to know things a
 
 \section{Goal ascription}
 Purposive action is action directed to the realisation of one or more outcomes.
-Goal ascription is the process of identifying which outcomes others' purposive actions are directed to.
+Goal ascription is the process of identifying to which outcomes others' purposive actions are directed.
 To illustrate, suppose that
 Hannah kicks a ball thereby both preventing her sisters from scoring and also breaking a window.
 Asked about episode,
-Hannah might protest that the goal of her action was not to break the window but only to avoid losing a game.
+Hannah might protest that the goal of her action was not to break the window but only to reverse the others' advance.
 As this illustrates,
 among the actual and possible outcomes of an action,
 only some are outcomes to which the action was directed.
 Goal ascription is the process of identifying from among an action's actual and possible outcomes
 those to which it is directed.
-We shall focus on goal ascription rather than the ascription of beliefs and mental states that has captured most interest.
 %Our immediate question is therefore, 
 %What evidence could support hypotheses about the outcomes to which actions are directed, 
 %and how would the evidence support the hypotheses?
 
-We narrow our focus to goal ascription 
+We focus on goal ascription 
 partly because this simplifies our argument,
 but mainly because goal ascription is widely thought to be among the very earliest components of mindreading to emerge (or, if goal ascription is not mindreading, then it is a late precursor).%
 \footnote{
@@ -206,10 +212,19 @@ By showing that
   evidence for goal ascriptions 
   which is unavailable to those who merely observe,
 we may be able to indicate ways in which interaction could facilitate the emergence, in evolution or development, of more sophisticated forms of mindreading.%
-
+\footnote{
+There are various ways of understanding the idea that mindreading may come in several forms, some less conceptually or cognitively demanding than others.
+For a range of views, see
+ \citet{Apperly:2009ju},
+ \citet{Call:2005qe},
+ \citet{Doherty:2006wz},
+ \citet{ONeill:2005ff}
+ and
+ \citet{Wellman:2001if}.
+}
 
 Because goal ascription has received little attention,
-we shall briefly review some of the benefits that being able to identify others' goals brings.
+we shall briefly review some potential benefits of being able to identify goals.
 It is a familiar idea that goal ascription enables one to learn from others' successes.
 For example,
 if you know or can guess that another agent's actions are directed to opening a nut,
@@ -225,23 +240,31 @@ then you now have evidence as to where they might be.\footnote{
 \citet{hare_chimpanzees_2004} exploit this principle in testing chimpanzees' abilities to ascribe goals.
 }
 This is one illustration of how goal ascription could in principle enable us to learn from others' failures 
-(see \citealp{Want:2001hp} offer another).
+(\citealp{Want:2001hp} offer another).
 
 
 Goal ascription enables one
 to predict and manipulate others' actions.
 If you know that an agent is engaged in a sequence of actions whose eventual goal involves retrieving some object,
 you may be able to predict that the agent will go to where the object is at some point.\footnote{
-For a practical application of this prediction, see \citet{Hare:2001ph}.
+For an application see \citet{Hare:2001ph}.
 }
 Equally, in some cases knowing this much about the goal of another's actions many enable you to assist them,
 either 
-by retrieving the object for them \citep[e.g.][]{warneken:2007sa}
-or
-by revealing the object's location to them \citep[e.g.][]{Liszkowski:2008al}.
+by retrieving the object for them 
+or else
+by revealing the object's location to them.%
+\footnote{
+For a paradigm involving the former see \citet{warneken:2007sa};
+on the latter, see \citet{Liszkowski:2008al}.
+}
 
-
-Goal ascription is also instrumental for mindreading:
+Goal ascription is also instrumental for ascribing propositional attitudes.
+We have already mentioned that such ascriptions often involve 
+confirming predictions about actions 
+which in turn typically involves
+identify the goals of those actions (\vpageref*{goal_ascription_verify}).
+In addition,
 knowing which outcomes an action is directed to may constrain hypotheses about what an agent intends 
 as well as
 potentially providing information concerning what the agent knows, believes or desires.
@@ -257,72 +280,111 @@ or that she falsely believes that some of the peanuts are over there.%
 information about an agent's beliefs or other mental states may support conclusions about her goals.
 Belief- and goal-ascriptions are mutually constraining.)
 
+Now that we have reviewed some of the benefits goal ascription can bring,
+what evidence grounds ascriptions of goals to actions?
+Consider the claim that 
+knowledgeably identifying the goals to which actions are directed
+depends on 
+knowledge of the agents' intentions
+which in turn depends 
+on knowledge of their beliefs, desires and other mental states.
+If this claim were true,
+there would be no such thing as a theory of the evidential basis of goal ascription,
+ only a theory of the evidential basis of mindreading more generally.
 
-Some might argue that goal ascription is not mindreading because 
-identifying relations between actions and the outcomes to which they are directed
-does not necessarily involve ascribing mental states.
-Recognizing the force of this argument,
-we wish to
-duck the complex issues it raises by
-remaining neutral on whether or not goal ascription is actually mindreading.
-Either way,
-goal ascription is essential in nearly all mindreading.
-For mindreading typically involves or depends on predictions about how individuals will act,
-and those predictions can rarely be verified without the mindreader identifying to which goals the actions are directed.
-So even if goal ascription is not mindreading,
-our mission---which is to show that
-being (or appearing) poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know---%
-can be achieved by focusing on goal ascription.
-If we can show that
-  some evidence for goal ascription is only available to mindreaders who can interact with their targets
-then,
-	given the role of goal ascription in supporting mindreading,
-we can conclude that
- some evidence which is indirectly relevant for mindreading is available only to mindreaders who can interact with their targets.
-
-
-There is potential for disagreement over whether it is possible to knowledgably identify the goals of an agent's actions without also ascribing some beliefs to that agent.  
-\citet[pp.48--50]{Bennett:1976rg}
-%\citet[pp.48--50]{Bennett:1976rg} suggests that a theory of goals ascription has to be developed together with a theory of (proto-)belief ascription: `An animal’s behaviour does not show what it registers unless we know what it seeks; but how can we learn what it seeks before we know what it registers?' [p. 48]
-and 
-\citet{Davidson:1974gh}
-both come close to suggesting that this is impossible,
-that ascribing goals cannot be done independently of ascribing beliefs.
-On this view (whether or not it is theirs), 
-goal ascription is interdependent with propositional attitude ascription in this sense: 
-there is no evidence for hypotheses narrowly about goals, only evidence for more complex hypotheses concerning both goals and mental states (such as beliefs).
-By contrast,
-\citet{Gergely:1995sq},
-*Meltzoff?,
-\citet{Baillargeon:gx}
+The falsity of this claim seems to be assumed in developmental research on goal ascription.%
+\footnote{ 
+Compare \citet{Gergely:1995sq}
 and 
 \citet{Woodward:1998dm}
-(among many others)
-appear to assume the opposite, 
-that it is possible to identify goals without even being able to ascribe beliefs.
-For what it is worth, we tentatively favour this latter position.%
-\footnote{
-It is striking that, as far as we can tell, neither Bennett nor Davidson offers an argument for this claim.
-They do note that beliefs and goals make an interdependent contribution to observed action.
-But this by itself does not show that goal ascription cannot in some cases involve justifiably ignoring the possibility of differences in belief between interpreters and their targets.
+among many others.
+}
+We know of no compelling reason for taking this claim to be true.
+After all,
+it is consistent with rejecting the claim to recognize that
+ ascriptions of goals to actions
+ constrain, and are constrained by,
+ ascriptions of intentions and other mental states.
+The existence of such constraints does not show that one could 
+not know something about the goals of actions 
+while not knowing anything about the agents' mental states.
+Further,
+there do seem to be situations where knowledge of agents' goals does not require any knowledge of their mental states.
 For instance,
 suppose that two people are sitting opposite each other at a low table
  which is 
 sparsely populated with objects.
 The objects are all out in the open; manifestly, both can clearly see them.
-If one reaches to grasp one of these objects (the duck, say), 
-must the other ascribe beliefs in order to knowledgeably identify the goal of her action?
+If one person reaches to grasp one of these objects (the duck, say), 
+must the other ascribe beliefs or other mental states in order to knowledgeably identify the goal of her action as that of grasping the duck?
 On the face of it, she need not.  
-Even if she had no ability to ascribe beliefs, she might nevertheless be in a position to acquire knowledge of the goal of the other's action.
+Even if she had no ability to ascribe mental states, it seems she might nevertheless be in a position to acquire knowledge of the goal of the other's action.
+
+While not decisive,
+these considerations are perhaps sufficient to motivate 
+exploring what evidence might ground goal ascription.
+According to 
+what Csibra and Gergely call `the principle of rational action':
+%
+\begin{quote}
+`an action can be explained by a goal state if, and only if, it is seen as the most justifiable action towards that goal state that is available within the constraints of reality.'%
+\footnote{
+\citet[p.\ 255]{Csibra:1998cx}; cf.\ \citet{Csibra:2003jv}.
+A related but different `principle of efficiency' has been formulated by \citet[p.\ 1061]{Southgate:2008el}:
+`goal attribution requires that agents expend the least possible amount of energy within their motor constraints to achieve a certain end.'
 }
-However, this debate is not directly relevant to our concerns here.
-Both sides can agree that 
-differences in belief between observer and protagonist
-are sometimes an obstacle to goal ascription.
-This is all that the problem of false belief requires.
+\end{quote}
+%
+Taking this as a rough starting point,
+we propose that
+goal ascription can involve 
+identifying which potentially desirable or beneficial outcomes 
+an observed action is the best available means to achieving.
+More carefully, our proposal is that:
+%
+\begin{idescription}
+\item[(E$_1$)] actions of type $a$ are normally a means of realising outcome $G$ in situations with the salient features of this situation;
+\end{idescription}
+%
+and:
+%
+\begin{idescription}
+\item[(E$_{2}$)] no alternative type of action, $a'$, is available to the agent and such that actions of this type would be normally be better\footnotemark \ means of realising outcome $G$ in situations which have the salient features of this situation;
+\footnotetext{
+An action of type $a'$ is a better means of realising outcome $G$ in a given situation than an action of type $a$ if, for instance, actions of type $a'$ normally involve less effort than actions of type $a$ 
+in situations with the salient features of this situation 
+and everything else is equal; 
+or if, for example, actions of type $a'$ are normally more likely to realise outcome $G$ than actions of type $a$
+in situations with the salient features of this situation 
+and everything else is equal.
+}
+\end{idescription}
+%
+and:
+%
+\begin{idescription}
+\item[(E$_3$)] the occurrence of outcome $G$ is potentially beneficial for the agent or typically desirable to agents of this type,
+and there is no other outcome, $G'$, which would be more beneficial to the agent or typically more desirable to agents of this type
+where  (E$_1$) and (E$_2$) both hold of $G'$ and $a$
+\end{idescription}
+%
+jointly constitute defeasible evidence for the conclusion that:
+%
+\begin{idescription}
+\item[(C)] $G$ is a goal to which action $a$ is directed.
+\end{idescription}
+%
+We further suggest that the above inference from (E$_1$)-(E$_3$) to (C) is a route to knowledge of the goals of actions in this sense:
+it would be possible to know the premises without already knowing the conclusion
+and 
+in some cases knowing the premises might put one in a position to know the conclusion.
 
+This proposal might be extended in various ways.
 
+Fact that this route to knowledge exists shows that goal ascription doesn't depend on mental state ascription.
 
+Don't suggest this is the only route to knowledge.
+Not claiming to be offering a comprehensive theory of the evidential basis of goal ascription.
 
 \section{The problem of opaque means}
 \label{sec:opaque_means}
@@ -949,121 +1011,6 @@ Such expertise,
 far from  presupposing sophisticated forms of mindreading,
 might instead
 play a role in explaining their emergence in evolution or development (or both).
-
-
-
-
-\section{OLD}
-
-These simple facts about goal ascription raise many questions.
-Some concern mechanism, how in fact one subject is able to discover facts about which outcomes another agent's actions are directed to.
-Another set of questions focuses on the evolution of goal ascription and the costs and benefits of being able to ascribe goals and of being a potential target of goal ascription.
-Our concern here is not directly with any of these questions.
-Instead we shall focus on a more narrowly epistemic question.
-What evidence could support hypotheses about the outcomes to which actions are directed?
-And how would the evidence support the hypotheses?%
-\footnote{
-These questions are versions of those Davidson constructs a theory of interpretation to answer.
-While what follows draws  on Davidson's insights,
-our aims here are more modest than his.
-For we are concerned only with a  fraction of the problem of ascribing mental states and meanings;
-and, unlike Davidson, we are not concerned with larger claims about the nature of mind.
-See
-\citet{Davidson:1973jx,Davidson:1990du,lepore_donald_2005}.
-}
-
-Of special interest is evidence available independently of any knowledge of mind or language.
-We want to know how it is possible to identify goals even without knowing what an agent believes or desires and even without understanding their communicative actions.
-Accordingly we will adopt the perspective of a goal ascriber who knows nothing about the mental states of her target agent that would distinguish this agent from any other.
-We will also stipulate that there is initially no common ground, shared culture or conventions.
-And we will stipulate that the goal ascriber is initially unable to understand any communicative actions.
-
-There are two sorts of motivation for these restriction on the evidential basis.
-One is simply that developmental and comparative research indicates that goal ascription does appear to take place  in such circumstances.%
-\footnote{
-*refs
-}
-This makes it important to understand the evidence on which such ascriptions could be based.
-(Of course 
-identifying evidence that could support such ascriptions 
-would not all by itself enable us to explain how goal ascriptions are actually made, 
-but identifying evidence is necessary if we are ever to explain the reliable success of mechanisms for goal ascription.)
-Another source of motivation is the conjecture that goal ascription is a prerequisite for the more sophisticated mindreading activities which reveal mental states and meanings.
-The coherence of this conjecture depends on the possibility of knowing something about which outcomes an agent's actions are directed to independently of knowing what she believes or desires and independently of understanding her communicative actions.%
-\footnote{
-*Compare and contrast Davidson?
-He did think relational attitudes (holding true) are the foundation for interpretation.
-But he also thought that interpretation had to happen all at once.)
-
-\citet[p.\ 17]{Dennett:1987sf} `Here is how it works: first you decide to treat the object whose behavior is to be predicted as a rational agent; then you figure out what beliefs that agent ought to have, given its place in the world and its purpose.   Then you figure out what desires it ought to have, on the same considerations, and finally your predict that this rational agent will act to further its goals in the light of its beliefs.  A little practical reasoning from the chosen set of beliefs and desires will in many—but not in all—instances yield a decision about what the agent ought to do; that is what you predict the agent will do.'
-}
-
-So what evidence could support goal ascription by someone who knows nothing discriminating about her targets' mental states or communicative actions?
-Ordinary third-person goal ascription, simplified and idealized, works like this.%
-\footnote{
-*ref? Dennett?
-}
-Faced with an action,
-the would-be goal ascriber first asks which outcomes this action could be a means to realising.
-She then considers which of these outcomes are potentially beneficial for, or desirable to, the agent.
-Any such outcomes are identified as goals to which the action is directed.
-So the fact that an action is a means to realising some outcome which is potentially beneficial or desirable is evidence for the conclusion that this outcome is one to which the action is directed.
-Schematically, the proposal is that:
-%
-\begin{idescription}
-\item[(E$_1$)] Action $a$ is a means of realising outcome $G$.
-\end{idescription}
-%
-and:
-%
-\begin{idescription}
-\item[(E$_2$)] The occurrence of outcome $G$ is potentially beneficial for, or desirable to, the agent of $a$.
-(And there is no other outcome, $G'$, which action $a$ is a means of realising and which would be more beneficial for, or more desirable to, the agent of $a$.)
-\end{idescription}
-%
-jointly constitute evidence for the conclusion that:
-%
-\begin{idescription}
-\item[(C)] $G$ is a goal to which action $a$ is directed.
-\end{idescription}
-
-This proposal might be extended in various ways.
-For instance, Southgate, Johnson and Csibra offer a `principle of efficiency' according to which:
-%
-\begin{quote}
-`goal attribution requires that agents expend the least possible amount of energy within their motor constraints to achieve a certain end.'
-\citep[p.\ *]{Southgate:2008el}
-\end{quote}
-%
-If this is a correct principle of goal attribution, we could extend the proposal above to incorporate it:
-%
-\begin{idescription}
-\item[(E$_3$)] No alternative action, $a'$, is a means to realising outcome $G$ and would involve expending less energy than $a$.
-\end{idescription}
-%
-Now the proposal is that (E$_1$) to (E$_3$) are jointly evidence for (C).
-
-In at least some cases goal attribution is likely to be more complicated than this proposal allows.
-To illustrate, note that some agents may weigh the efficiency of alternative actions against their possible side effects and how reliable they would be as a means to realising an outcome.
-Where this is true, 
-identifying the evidential basis for goal ascription may require  a similar weighing of these factors in inferring backwards from actions to their goals.%
-\footnote{
-This is loosely related to what Csibra and Gergely call `the principle of rational action'.
-As they formulate the principle,
-`an action can be explained by a goal state if, and only if, it is seen as the most justifiable action towards that goal state that is available within the constraints of reality'
-(\citealp[p.\ *]{Csibra:1998cx}; cf.\ \citealp{Csibra:2003jv}).
-}
-Specifying exactly what should be weighed and how is beyond the scope of this paper,
-(and may also be something which varies between species of agent).
-We can mark the gap with an alternative to (E$_3$) which uses an unspecified notion of `better' as a placeholder:
-%
-\begin{idescription}
-\item[(E$_{3'}$)] No alternative action, $a'$, is a better means to realising outcome $G$.
-\end{idescription}
-%
-This, then, is the standard approach to answering our question about goal attribution: (E$_1$), (E$_2$) and (E$_{3'}$) jointly constitute evidence for (C) given that these approximate conditions under which it would be rational to perform $a$ in order to realise $G$ and given that agents approximate to performing $a$ in order to realise $G$ rather than any other outcome under these conditions.
-
-
 
 
 
