second section drafted, also some work on conclusion (incomplete)

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -224,7 +224,12 @@ For a range of views, see
 }
 
 Because goal ascription has received little attention,
-we shall briefly review some potential benefits of being able to identify goals.
+in this section
+we shall 
+briefly review some potential benefits of being able to identify goals
+and then 
+consider what sort of evidence might support goal ascription.
+
 It is a familiar idea that goal ascription enables one to learn from others' successes.
 For example,
 if you know or can guess that another agent's actions are directed to opening a nut,
@@ -281,7 +286,7 @@ information about an agent's beliefs or other mental states may support conclusi
 Belief- and goal-ascriptions are mutually constraining.)
 
 Now that we have reviewed some of the benefits goal ascription can bring,
-what evidence grounds ascriptions of goals to actions?
+what evidence could support ascriptions of goals to actions?
 Consider the claim that 
 knowledgeably identifying the goals to which actions are directed
 depends on 
@@ -292,11 +297,11 @@ If this claim were true,
 there would be no such thing as a theory of the evidential basis of goal ascription,
  only a theory of the evidential basis of mindreading more generally.
 
-The falsity of this claim seems to be assumed in developmental research on goal ascription.%
+The falsity of this claim seems to be assumed in both developmental and comparative research on goal ascription.%
 \footnote{ 
-Compare \citet{Gergely:1995sq}
-and 
-\citet{Woodward:1998dm}
+Compare \citet{Gergely:1995sq},
+	\citet{Woodward:1998dm} and
+	\citet{Penn:2007ey}
 among many others.
 }
 We know of no compelling reason for taking this claim to be true.
@@ -307,7 +312,7 @@ it is consistent with rejecting the claim to recognize that
  ascriptions of intentions and other mental states.
 The existence of such constraints does not show that one could 
 not know something about the goals of actions 
-while not knowing anything about the agents' mental states.
+while  knowing nothing about the agents' mental states.
 Further,
 there do seem to be situations where knowledge of agents' goals does not require any knowledge of their mental states.
 For instance,
@@ -318,7 +323,7 @@ The objects are all out in the open; manifestly, both can clearly see them.
 If one person reaches to grasp one of these objects (the duck, say), 
 must the other ascribe beliefs or other mental states in order to knowledgeably identify the goal of her action as that of grasping the duck?
 On the face of it, she need not.  
-Even if she had no ability to ascribe mental states, it seems she might nevertheless be in a position to acquire knowledge of the goal of the other's action.
+Even if she had no ability to ascribe mental states, it seems she might nevertheless be in a position to identify the goal of the other's action.
 
 While not decisive,
 these considerations are perhaps sufficient to motivate 
@@ -335,21 +340,24 @@ A related but different `principle of efficiency' has been formulated by \citet[
 }
 \end{quote}
 %
-Taking this as a rough starting point,
+Taking this idea as a rough starting point,
 we propose that
-goal ascription can involve 
-identifying which potentially desirable or beneficial outcomes 
-an observed action is the best available means to achieving.
-More carefully, our proposal is that:
+%goal ascription could sometimes involve 
+%identifying which potentially desirable outcomes 
+%an observed action is the best available means to achieving.
+%More carefully, our proposal is that 
+these facts:
 %
-\begin{idescription}
-\item[(E$_1$)] actions of type $a$ are normally a means of realising outcome $G$ in situations with the salient features of this situation;
-\end{idescription}
+\begin{enumerate}
 %
-and:
+\item action $a$ is directed to some goal;
 %
-\begin{idescription}
-\item[(E$_{2}$)] no alternative type of action, $a'$, is available to the agent and such that actions of this type would be normally be better\footnotemark \ means of realising outcome $G$ in situations which have the salient features of this situation;
+\item actions of $a$'s type are normally capable of being means of realising outcomes of $G$'s type in situations with the salient (to any concerned) features of this situation;
+% 
+\item no alternative type of action is both 
+typically available to agents of this type 
+and also 
+such that actions of this type would be normally be significantly better\footnotemark \ means of realising outcome $G$ in situations with the salient features of this situation;
 \footnotetext{
 An action of type $a'$ is a better means of realising outcome $G$ in a given situation than an action of type $a$ if, for instance, actions of type $a'$ normally involve less effort than actions of type $a$ 
 in situations with the salient features of this situation 
@@ -358,33 +366,96 @@ or if, for example, actions of type $a'$ are normally more likely to realise out
 in situations with the salient features of this situation 
 and everything else is equal.
 }
-\end{idescription}
 %
-and:
+\item the occurrence of outcome $G$ is typically desirable for agents of this type;
 %
-\begin{idescription}
-\item[(E$_3$)] the occurrence of outcome $G$ is potentially beneficial for the agent or typically desirable to agents of this type,
-and there is no other outcome, $G'$, which would be more beneficial to the agent or typically more desirable to agents of this type
-where  (E$_1$) and (E$_2$) both hold of $G'$ and $a$
-\end{idescription}
+\end{enumerate}
 %
-jointly constitute defeasible evidence for the conclusion that:
+and
 %
-\begin{idescription}
-\item[(C)] $G$ is a goal to which action $a$ is directed.
-\end{idescription}
+\begin{enumerate}[resume]
+\item there is no other outcome, $G'$, 
+the occurrence of which would be at least comparably desirable for agents of this type 
+and where (2) and (3) both hold of $G'$ and $a$
 %
-We further suggest that the above inference from (E$_1$)-(E$_3$) to (C) is a route to knowledge of the goals of actions in this sense:
-it would be possible to know the premises without already knowing the conclusion
-and 
-in some cases knowing the premises might put one in a position to know the conclusion.
+%where
+%	the occurrence of $G'$ would be at least comparably desirable for agents of this type 
+%%where
+%%	$G$'s occurrence is not a means to $G'$'s nor conversely,
+%and
+%where  
+%	(2) and (3) both hold of $G'$ and $a$
+\end{enumerate}
+%
+may jointly constitute defeasible evidence for the conclusion that:
+%
+\begin{enumerate}[resume]
+\item $G$ is a goal to which action $a$ is directed.
+\end{enumerate}
+%
+We suggest that the above inference, from (1)-(5) to (6), is a route to knowledge of the goals of actions in this sense:
+it would be possible to know the premises without already knowing the conclusion;
+and, 
+in some cases knowing the premises could put one in a position to know the conclusion.%
+\footnote{
+Knowledge of the premises may not require explicit knowledge of what others find obvious, what is salient to them or what makes actions better for them.
+It is arguably sufficient that
+the individual ascribing a goal 
+is entitled to 
+rely on being sufficiently similar to the target of her ascription 
+with respect to 
+	what she finds obvious, 
+	what makes one action a better or worse means of realising an outcome than another action for her,  
+	what is desirable to her,
+	and what is salient to her.
+}
 
-This proposal might be extended in various ways.
+Why accept this?
+Suppose that 
+	(1)-(5) are facts 
+and that
+	$G$ is not a goal to which action $a$ is directed.
+Then from (1) we know that $a$ has a goal, call it $G'$.
+And from (5) we can infer that either 
+(i) 
+the action, $a$, was not of a type that is normally capable 
+of being a means to the outcome to which it was directed,
+or
+(ii) 
+a significantly better (for instance, a more reliable or less effortful) means of achieving $G'$ is typically available to agents of this type,
+or
+(iii)
+$G'$'s occurrence would be significantly less desirable than $G$'s occurrence for agents of this type.
+So the agent's action fell short of being appropriate or optimal in some way,
+or the agent has atypical preferences or capabilities,
+or the situation is not normal.
+While any of these is possible---%
+and perhaps in some cases even to be expected---%
+there are also circumstances in which it is reasonable to suppose that none obtains,
+that the situation will be normal in relevant respects,
+that agents will have typical preferences and capabilities 
+and that they will act in ways that are appropriate and (in the limited sense in play here) optimal.
+In such circumstances, the above inference can serve as a route to knowledge of the goals of actions.
+The existence of this route to knowledge shows that goal ascription doesn't invariably depend on mental state ascription.
 
-Fact that this route to knowledge exists shows that goal ascription doesn't depend on mental state ascription.
+Note that we are not suggesting that the above inference captures the only route to knowledge of the goals of actions,
+or that it provides anything like a comprehensive theory of the evidential basis of goal ascription.
+This route to knowledge has only limited applications.
+For example, it cannot be used when an action is the best available means of achieving two or more comparably desirable outcomes.
+The point of this brief discussion was only to 
+consider the sort of evidence that can bear on goal ascrpition
+and to 
+show that 
+even those incapable of ascribing mental states like belief 
+might nevertheless have evidence sufficient for goal ascription.
 
-Don't suggest this is the only route to knowledge.
-Not claiming to be offering a comprehensive theory of the evidential basis of goal ascription.
+Our narrow aim in what follows is to show that some routes to knowledge of the goals of actions 
+are available only to interacting mindreaders
+and not to those who merely observe.
+Having in this section introduced goal ascription as a topic,
+the next step is to identify an obstacle to acquiring knowledge of the goals of actions,
+one which we will eventually show can be avoided where mindreaders can (or appear to be able to) interact with their targets.
+
 
 \section{The problem of opaque means}
 \label{sec:opaque_means}
@@ -974,12 +1045,11 @@ that the goals of her target's actions will be her goals.
 This in outline is the `your-goal-is-my-goal' route to knowledge.
 
 
-
-***Return to the leading theories?
-We do not take this to show that the leading theories must be entirely discarded.
-If we are right about interaction making evidence available, 
-either leading theory can be extended accordingly.
-***
+%***Return to the leading theories?
+%We do not take this to show that the leading theories must be entirely discarded.
+%If we are right about interaction making evidence available, 
+%either leading theory can be extended accordingly.
+%***
 
 
 To show that this route to knowledge is potentially valuable,
@@ -1006,16 +1076,32 @@ expertise with
   tools 
   and
   communicative gestures
-does not presuppose rich insights into others' intentions and beliefs.
+does not presuppose knowledge of others' intentions and beliefs.
 Such expertise,
 far from  presupposing sophisticated forms of mindreading,
 might instead
 play a role in explaining their emergence in evolution or development (or both).
 
-
-
-
-
+How might this work?
+***sketch the story***
+Clearly this is a wild conjecture,
+and not one that we have given any reason for accepting.
+Our point in mentioning it is merely to illustrate how
+ better understanding the role of interaction in goal ascription and mindreading generally
+may eventually lead to discoveries
+on how
+ sophisticated forms of cognition
+ emerge from
+ conceptually and cognitively undemanding forms of interaction.
+If the culture of tool use,
+the simpler forms of communicative gesture
+or the sharing of knowledge and other mental states
+originates in abilities to interact,
+then we need to know how interaction could lead to the emergence of these things.
+Our  suggestion has been that
+understanding how interacting mindreaders 
+could know things about their minds which mere observers might not be in a position to know
+will provide some of the details.
 
 
 \bibliography{$HOME/endnote/phd_biblio}
